v3-k8s/manifests/app/base/ingress-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasteam-ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  rules:
    - host: api.tasteam.kr
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: spring-boot-svc
                port:
                  number: 80
